--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ networks:
 
 services:
   setup:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    image: luised2094/setup:latest
+    container_name: setup
     volumes:
       - certs:/usr/share/elasticsearch/config/certs
       - ./setup/setup_script.sh:/setup_script.sh
@@ -21,9 +22,9 @@ services:
     command: >
       bash /setup_script.sh
     healthcheck:
-      test: ["CMD-SHELL", "[ -f config/certs/es01/es01.crt ]"]
-      interval: 1s
-      timeout: 5s
+      test: ["CMD-SHELL", "[ -f /usr/share/elasticsearch/config/certs/es01/es01.crt ]"]
+      interval: 10s
+      timeout: 10s
       retries: 120
   redis:
     image: 'redis:6.2-alpine'
@@ -32,7 +33,7 @@ services:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 10s
-      retries: 3
+      retries: 120
       start_period: 5s   
     
   celery_worker:
@@ -120,7 +121,7 @@ services:
       test: ["CMD-SHELL", "pg_isready -d transcendence -U transcendence"]
       interval: 10s
       timeout: 10s
-      retries: 50 
+      retries: 120 
       start_period: 10s
 
   gateway:
@@ -149,9 +150,9 @@ services:
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/metrics"]
       interval: 10s
-      timeout: 20s
-      start_period: 40s
-      retries: 3
+      timeout: 10s
+      retries: 120 
+      start_period: 10s
 
   usermanagement:
     restart: always
@@ -172,30 +173,9 @@ services:
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/metrics"]
       interval: 10s
-      timeout: 20s
-      start_period: 40s
-      retries: 3
-
-  chat:
-    restart: always
-
-    depends_on:
-      migrations:
-        condition: service_started
-      db:
-        condition: service_healthy
-    container_name: chat
-    build: ./chat
-    volumes:
-      - ${LOGSTASH_FOLDER}${TOURNAMENT_LOG}:/var/log/${TOURNAMENT_LOG}
-      - ${DJANGO_SCRIPT}:/start.sh
-      - ./chat:/app
-
-    env_file:
-      - .env
-    environment:
-      - APP=chatapp
-      - DEBUG=${DEBUG}
+      timeout: 10s
+      retries: 120 
+      start_period: 10s
 
   tournaments:
     depends_on:
@@ -221,9 +201,9 @@ services:
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/metrics"]
       interval: 10s
-      timeout: 20s
-      start_period: 40s
-      retries: 20
+      timeout: 10s
+      retries: 120 
+      start_period: 10s
 
   # Monitoring Container
 
@@ -256,15 +236,14 @@ services:
       - grafana-data:/var/lib/grafana
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
-      interval: 10s    
+      interval: 10s
       timeout: 10s
-      retries: 3
+      retries: 120 
       start_period: 10s
 
 
   es01:
     restart: always
-
     depends_on:
       setup:
         condition: service_healthy
@@ -283,13 +262,13 @@ services:
       - bootstrap.memory_lock=true
       - xpack.security.enabled=true
       - xpack.security.http.ssl.enabled=true
-      - xpack.security.http.ssl.key=certs/es01/es01.key
-      - xpack.security.http.ssl.certificate=certs/es01/es01.crt
-      - xpack.security.http.ssl.certificate_authorities=certs/ca/ca.crt
+      - xpack.security.http.ssl.key=/usr/share/elasticsearch/config/certs/es01/es01.key
+      - xpack.security.http.ssl.certificate=/usr/share/elasticsearch/config/certs/es01/es01.crt
+      - xpack.security.http.ssl.certificate_authorities=/usr/share/elasticsearch/config/certs/ca/ca.crt
       - xpack.security.transport.ssl.enabled=true
-      - xpack.security.transport.ssl.key=certs/es01/es01.key
-      - xpack.security.transport.ssl.certificate=certs/es01/es01.crt
-      - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
+      - xpack.security.transport.ssl.key=/usr/share/elasticsearch/config/certs/es01/es01.key
+      - xpack.security.transport.ssl.certificate=/usr/share/elasticsearch/config/certs/es01/es01.crt
+      - xpack.security.transport.ssl.certificate_authorities=/usr/share/elasticsearch/config/certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
     mem_limit: ${ES_MEM_LIMIT}
@@ -297,15 +276,19 @@ services:
       memlock:
         soft: -1
         hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
     healthcheck:
       test:
         [
           "CMD-SHELL",
-          "curl -s --cacert config/certs/ca/ca.crt https://localhost:9200 | grep -q 'missing authentication credentials'",
+          "curl -s --cacert /usr/share/elasticsearch/config/certs/ca/ca.crt https://localhost:9200 | grep -q 'missing authentication credentials'",
         ]
       interval: 10s
       timeout: 10s
-      retries: 120
+      retries: 120 
+      start_period: 10s
 
   logstash:
     restart: always
@@ -319,8 +302,7 @@ services:
     labels:
       co.elastic.logs/module: logstash
     container_name: logstash
-#    user: root
-
+    user: '0'
     volumes:
       - certs:/usr/share/logstash/certs
       - ./ELK/logstash:/usr/share/logstash/pipeline:ro
@@ -366,7 +348,8 @@ services:
         ]
       interval: 10s
       timeout: 10s
-      retries: 120
+      retries: 120 
+      start_period: 10s
 
   blockchain:
    depends_on:
@@ -418,6 +401,7 @@ services:
       - ${LOGSTASH_FOLDER}:/var/log/
       - ./selfsigned.crt:/app/selfsigned.crt
       - ./selfsigned.key:/app/selfsigned.key
+
 
 
 volumes:
